# ai-ux-auditor

./: LICENSE  README.md  pyproject.toml
examples/: config.yaml  dom_snapshot.json  surveys.csv
src/aiux/: auditor.py  cli.py  reporting.py
