[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ux-auditor"
version = "0.0.1"
description = "AI-assisted accessibility and usability audit toolkit"
authors = [{ name = "Acrobat" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1.7"]

[project.scripts]
aiux = "aiux.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
